# Era

./: .gitignore  README.md
Source/: Application.cpp  Application.h  CMakeLists.txt  Log.h  Main.cpp  MinWindows.h  Window.cpp  Window.h
Source/Asset/: Asset.cpp  Asset.h  CMakeLists.txt  MeshAsset.cpp  MeshAsset.h
Source/Assets/: box.fbx  high_poly_monkey.fbx  monkey.fbx  sphere.fbx
Source/Core/: Application.cpp  Application.h  CMakeLists.txt  Log.cpp  Log.h  Timer.cpp  Timer.h  Window.cpp  Window.h
Source/Editor/: CMakeLists.txt  EditorUI.cpp  EditorUI.h
Source/Renderer/: CMakeLists.txt  ConstantBuffer.cpp  ConstantBuffer.h  DeviceContext.cpp  DeviceContext.h  ErrorChecker.cpp  ErrorChecker.h  GraphicsDevice.cpp  GraphicsDevice.h  IndexBuffer.cpp  IndexBuffer.h  InfoQueue.cpp  InfoQueue.h  InputLayout.cpp  InputLayout.h  Layout.cpp  Layout.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshAsset.cpp  MeshAsset.h  RasterizerState.cpp  RasterizerState.h  Renderer.cpp  Renderer.h  SamplerState.cpp  SamplerState.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  SwapChain.cpp  SwapChain.h  Texture2D.cpp  Texture2D.h  TextureArray.cpp  TextureArray.h  VertexBuffer.cpp  (+1 more)
Source/Scene/: CMakeLists.txt  Components.h  Entity.cpp  Entity.h  MeshRendererComponent.cpp  MeshRendererComponent.h  Scene.cpp  Scene.h
Source/Shaders/: Lit.pshader  Lit.vshader  MicrofacetBRDF.hlsl  PBR.pshader  PBR.vshader  PBR_Texture.pshader  UI.pshader  UI.vshader  Unlit.pshader  Unlit.vshader
Source/UserInterface/: CMakeLists.txt  RenderInterface.cpp  RenderInterface.h  SystemInterface.cpp  SystemInterface.h
